<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- Common -->
    <string name="ok">OK</string>
    <string name="edit">Edit</string>
    <string name="rename">Rename</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="refresh">Refresh</string>
    <string name="settings">Settings</string>
    <string name="exit">Exit</string>

    <!-- Activities -> Main -->
    <string name="app_name">Swallow</string>
    <string name="enable">Enable</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="save_login_credentials">Save login credentials</string>
    <string name="no_changes_detected">No changes detected</string>
    <string name="credentials_saved">Credentials saved</string>
    <string name="enter_credentials">Enter a username and password</string>
    <string name="enabled_autologin">Enabled auto-login</string>
    <string name="disabled_autologin">Disabled auto-login</string>
    <string name="about_text">Version %1$s \"%2$s\"\nCopyright 2014–2015 Andrew Sun</string>
    <string name="unsaved_credentials_title">Unsaved credentials</string>
    <string name="unsaved_credentials_message">You have unsaved changes to your login credentials.\n\nExit without saving?</string>
    <string name="checking_credentials_message">Checking login credentials…</string>

    <string name="confirm_save_title">Confirm save</string>
    <string name="confirm_save_message_incorrect_credentials">Your username or password is incorrect.</string>
    <string name="confirm_save_message_account_banned">Your account is banned.</string>
    <string name="confirm_save_message_unknown_result">The server sent a message that we didn\'t understand.</string>
    <string name="confirm_save_message_exceeded_max_retries">Cannot connect to server. This is normal if you are not connected to the school WiFi.</string>
    <string name="confirm_save_message_footer">Do you want to save your credentials anyways?</string>

    <!-- Activities -> Profile manager -->
    <string name="profile_manager">Profiles</string>
    <string name="create_profile">Create profile</string>
    <string name="profile_name">Profile name</string>
    <string name="duplicate_name_title">Duplicate name</string>
    <string name="duplicate_name_message">A profile with that name already exists!</string>
    <string name="confirm_delete_profile_title">Delete this profile?</string>
    <string name="confirm_delete_profile_message">It will be gone forever (a very long time)!</string>

    <!-- Activities -> Profile editor -->
    <string name="profile_editor">Profile editor</string>
    <string name="add_manually_button_text">Add manually</string>
    <string name="add_all_in_range_button_text">Add all in range</string>
    <string name="network_bssid">Network BSSID</string>
    <string name="network_bssid_hint">12:34:56:78:ab:cd</string>
    <string name="invalid_bssid_format">Invalid BSSID format</string>
    <string name="enable_wifi">Please enable WiFi</string>
    <string name="no_networks_available">No networks available</string>
    <string name="all_networks_filtered">All networks filtered\n\nCheck your network scanner settings</string>

    <!-- Notifications -->
    <string name="noti_logging_in">Logging in</string>
    <string name="noti_logging_in_using_account">Using account: %s</string>
    <string name="noti_logging_in_retrying_plural">Retrying %d more times</string>
    <string name="noti_logging_in_retrying_single">Retrying %d more time</string>
    <string name="noti_login_failed">Login failed</string>
    <string name="noti_login_failed_incorrect_credentials">Incorrect username/password</string>
    <string name="noti_login_failed_account_banned">Account has been disabled</string>
    <string name="noti_login_failed_exceeded_max_retries">Connection failed. Touch to retry</string>
    <string name="noti_login_failed_unknown">Unknown error occurred. Touch to retry</string>
    <string name="noti_touch_to_log_in_title">Swallow</string>
    <string name="noti_touch_to_log_in_content">Touch to log in to WiFi</string>
    <string name="noti_setup_required_title">Swallow</string>
    <string name="noti_setup_required_message">Touch to set up account</string>

    <!-- Preferences -> Login -->
    <string name="pref_category_login">Login</string>
    <string name="pref_login_status_check_interval_title">Login check interval</string>
    <string name="pref_login_status_check_interval_summary">How often to check login status</string>
    <string name="pref_login_retry_count_title">Retry count</string>
    <string name="pref_login_retry_count_summary">How many times to retry a failed login</string>

    <!-- Preferences -> Notifications -->
    <string name="pref_category_notifications">Notifications</string>
    <string name="pref_show_login_prompt_title">Show login prompt</string>
    <string name="pref_show_login_prompt_summary_on">Show confirmation notification before logging in</string>
    <string name="pref_show_login_prompt_summary_off">Do not show confirmation notification before logging in</string>
    <string name="pref_show_progress_notification_title">Show progress notification</string>
    <string name="pref_show_progress_notification_summary_on">Display login progress notification</string>
    <string name="pref_show_progress_notification_summary_off">Do not display login progress notification</string>
    <string name="pref_show_error_notification_title">Show error notification</string>
    <string name="pref_show_error_notification_summary_on">Display a notification when login fails</string>
    <string name="pref_show_error_notification_summary_off">Do not display a notification when login fails</string>

    <!-- Preferences -> Network scanner -->
    <string name="pref_category_network_scanner">Network scanner</string>
    <string name="pref_show_shs_only_title">Show \'shs\' only</string>
    <string name="pref_show_shs_only_summary_on">Only display networks with the name \'shs\'</string>
    <string name="pref_show_shs_only_summary_off">Display all networks</string>
    <string name="pref_scan_rate_title">Scan rate</string>
    <string name="pref_scan_rate_summary">How often to refresh the list of WiFi networks</string>
    <string name="pref_minimum_signal_strength_title">Minimum signal strength</string>
    <string name="pref_minimum_signal_strength_summary">The minimum strength for displayed WiFi networks</string>
</resources>