<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:weightSum="1" android:padding="@dimen/window_padding">
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:hint="@string/username" android:id="@+id/username_edittext" android:singleLine="true"
        android:inputType="textVisiblePassword"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/password_edittext" android:layout_gravity="center_horizontal"
        android:hint="@string/password" android:inputType="textPassword" android:singleLine="true"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile_manager"
        android:id="@+id/profile_manager_button"/>
</LinearLayout>

